add queued books tab to dashboard
